# simplified_slm

./: .gitignore  README.md  TRAINING_VALIDATION.md  __init__.py  generate.py  instructions.md  pyproject.toml  train.py
configs/: hnet_bit_100M.json  hnet_bit_1stage.json  hnet_bit_2stage.json  hnet_bit_350M.json  slm_100M.json  slm_base.json  training_1stage_tinystories.json  training_2stage_tinystories.json  training_350M_tinystories.json  training_flat_tinystories.json  training_hierarchical.json  training_small.json
docs/: TRAINING_GUIDE.md
layers/: __init__.py  attention.py  hgrn_bit.py
models/: __init__.py  config.py  hnet_bit.py  modeling.py
ops/: __init__.py  activations.py  bitnet.py  dynamic_chunking.py  fused_norm_gate.py  fusedbitnet.py  short_conv.py
ops/hgrn/: __init__.py  chunk.py  recurrent_fuse.py
scripts/: analyze_training.py  check_weights_space.py  evaluate_model.py  prepare_dataset.py  prepare_tinystories.py  run_experiment.py
test_checkpoints/tensorboard/: events.out.tfevents.1771624468.archlinux.101611.0  events.out.tfevents.1771624468.archlinux.101611.1  events.out.tfevents.1771624468.archlinux.101611.2  events.out.tfevents.1771624526.archlinux.102182.0  events.out.tfevents.1771624526.archlinux.102182.1  events.out.tfevents.1771624526.archlinux.102182.2  events.out.tfevents.1771624775.archlinux.105866.0  events.out.tfevents.1771624775.archlinux.105866.1  events.out.tfevents.1771624775.archlinux.105866.2  events.out.tfevents.1772555991.archlinux.92705.0  events.out.tfevents.1772555991.archlinux.92705.1  events.out.tfevents.1772555991.archlinux.92705.2  events.out.tfevents.1773282733.archlinux.185233.0  events.out.tfevents.1773282733.archlinux.185233.1  events.out.tfevents.1773282733.archlinux.185233.2  events.out.tfevents.1773283067.archlinux.188757.0  events.out.tfevents.1773283067.archlinux.188757.1  events.out.tfevents.1773283067.archlinux.188757.2  events.out.tfevents.1773283139.archlinux.189553.0  events.out.tfevents.1773283139.archlinux.189553.1  events.out.tfevents.1773283139.archlinux.189553.2
tests/: test_attention.py  test_dataset_loader.py  test_dynamic_chunking.py  test_evaluator.py  test_fused_bitlinear.py  test_hgrn_bit.py  test_hierarchical_training.py  test_hnet_bit.py  test_metrics.py  test_model.py  test_packed_sequences.py
training/: __init__.py  config.py  data.py  dataset_loader.py  evaluator.py  logger.py  metrics.py  optimizer.py  trainer.py
utils/: __init__.py  cache.py  helpers.py  hnet_cache.py  tokenizers.py
